--- a/DNM Text Editor/DNM Text Editor/Base.lproj/Main.storyboard
+++ b/DNM Text Editor/DNM Text Editor/Base.lproj/Main.storyboard
@@ -89,12 +89,12 @@
                                         </menuItem>
                                         <menuItem title="Save…" keyEquivalent="s" id="pxx-59-PXV">
                                             <connections>
-                                                <action selector="saveMenuItemSelected:" target="Voe-Tx-rLC" id="6IN-1I-7eD"/>
+                                                <action selector="saveMenuItemSelected:" target="Voe-Tx-rLC" id="9YW-Ge-xId"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Save As…" keyEquivalent="S" id="Bw7-FT-i3A">
                                             <connections>
-                                                <action selector="saveAsMenuItemSelected:" target="Voe-Tx-rLC" id="GQO-Yg-WcX"/>
+                                                <action selector="saveAsMenuItemSelected:" target="Voe-Tx-rLC" id="EhI-ai-V13"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Revert to Saved" id="KaW-ft-85H">
