--- a/DNM_iOS/DNM_iOS/Base.lproj/Main.storyboard
+++ b/DNM_iOS/DNM_iOS/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -18,25 +19,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xyS-7X-zgc">
-                                <rect key="frame" x="20" y="71" width="282" height="508"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="282" id="PNe-6B-cdZ"/>
-                                </constraints>
-                                <color key="sectionIndexBackgroundColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="cell" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="6mg-yK-caO" customClass="ScoreSelectorTableViewCell" customModule="DNM_iOS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="282" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6mg-yK-caO" id="Jv9-fi-6gk">
-                                            <rect key="frame" x="0.0" y="0.0" width="282" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <sections/>
-                            </tableView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Caa-XT-01H">
                                 <rect key="frame" x="408" y="197" width="172" height="30"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
@@ -53,12 +35,6 @@
                                     <action selector="didEnterPassword:" destination="9y5-Cj-rQY" eventType="primaryActionTriggered" id="cUe-xy-IHf"/>
                                 </connections>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORES" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E1I-tt-Lh5">
-                                <rect key="frame" x="20" y="42" width="282" height="21"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="logged in as jsbean" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMx-Yh-VL7">
                                 <rect key="frame" x="310" y="139" width="270" height="24"/>
                                 <constraints>
@@ -94,38 +70,92 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zNb-Hy-ZWn">
+                                <rect key="frame" x="489" y="350" width="51" height="31"/>
+                                <connections>
+                                    <action selector="didChangeValueOfSwitch:" destination="9y5-Cj-rQY" eventType="valueChanged" id="9im-i2-tsA"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="light" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B6k-Xx-AOc">
+                                <rect key="frame" x="447" y="355" width="34" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="34" id="txy-cp-H3H"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dark" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJB-pa-jzn">
+                                <rect key="frame" x="546" y="355" width="34" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color Mode" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Etw-e5-raT">
+                                <rect key="frame" x="468" y="321" width="89" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="scoreSelectorTableView" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LIu-wc-gow">
+                                <rect key="frame" x="20" y="20" width="240" height="560"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="g0e-2k-8kt"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="cell" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Oqp-XN-rxw" customClass="ScoreSelectorTableViewCell" customModule="DNM_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="240" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Oqp-XN-rxw" id="m1p-EN-a8R">
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="IMx-Yh-VL7" firstAttribute="trailing" secondItem="nEa-qW-GR8" secondAttribute="trailingMargin" id="09b-fc-epe"/>
                             <constraint firstItem="wyB-Xg-hHv" firstAttribute="top" secondItem="nEa-qW-GR8" secondAttribute="top" constant="235" id="0ha-6z-ppP"/>
                             <constraint firstItem="AJ3-9v-aRT" firstAttribute="trailing" secondItem="wyB-Xg-hHv" secondAttribute="trailing" id="2Dz-4o-AEA"/>
-                            <constraint firstItem="xyS-7X-zgc" firstAttribute="top" secondItem="E1I-tt-Lh5" secondAttribute="bottom" constant="8" id="7EI-Pm-D3b"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Etw-e5-raT" secondAttribute="trailing" constant="23" id="5e8-Xg-z4G"/>
                             <constraint firstItem="AJ3-9v-aRT" firstAttribute="top" secondItem="wyB-Xg-hHv" secondAttribute="bottom" constant="8" symbolic="YES" id="8b1-ta-38H"/>
-                            <constraint firstItem="E1I-tt-Lh5" firstAttribute="trailing" secondItem="xyS-7X-zgc" secondAttribute="trailing" id="FWG-ql-VLF"/>
+                            <constraint firstItem="LIu-wc-gow" firstAttribute="leading" secondItem="nEa-qW-GR8" secondAttribute="leadingMargin" id="9Cd-z4-UwY"/>
+                            <constraint firstItem="zNb-Hy-ZWn" firstAttribute="leading" secondItem="B6k-Xx-AOc" secondAttribute="trailing" constant="8" symbolic="YES" id="Fdf-iN-2Qg"/>
                             <constraint firstItem="YCt-8S-fkb" firstAttribute="trailing" secondItem="nEa-qW-GR8" secondAttribute="trailingMargin" constant="5" id="G9I-Pa-Q4I"/>
-                            <constraint firstItem="xyS-7X-zgc" firstAttribute="top" secondItem="gEP-2p-2bT" secondAttribute="bottom" constant="51" id="HzQ-3V-Y6h"/>
+                            <constraint firstItem="B6k-Xx-AOc" firstAttribute="firstBaseline" secondItem="dJB-pa-jzn" secondAttribute="firstBaseline" id="Mjy-TG-L7o"/>
                             <constraint firstItem="wyB-Xg-hHv" firstAttribute="trailing" secondItem="IMx-Yh-VL7" secondAttribute="trailing" id="OIs-mL-gFH"/>
+                            <constraint firstItem="LIu-wc-gow" firstAttribute="top" secondItem="gEP-2p-2bT" secondAttribute="bottom" id="OlK-YZ-f8d"/>
                             <constraint firstItem="YCt-8S-fkb" firstAttribute="bottom" secondItem="Kd5-La-26H" secondAttribute="top" id="R3g-An-mjd"/>
-                            <constraint firstItem="E1I-tt-Lh5" firstAttribute="leading" secondItem="xyS-7X-zgc" secondAttribute="leading" id="TYA-zP-1XL"/>
-                            <constraint firstItem="xyS-7X-zgc" firstAttribute="leading" secondItem="nEa-qW-GR8" secondAttribute="leadingMargin" id="Wl4-bl-Oj6"/>
+                            <constraint firstItem="Etw-e5-raT" firstAttribute="top" secondItem="AJ3-9v-aRT" secondAttribute="bottom" constant="18" id="T1b-Kr-kTk"/>
+                            <constraint firstItem="zNb-Hy-ZWn" firstAttribute="centerY" secondItem="B6k-Xx-AOc" secondAttribute="centerY" id="TGc-hg-0BJ"/>
+                            <constraint firstItem="dJB-pa-jzn" firstAttribute="baseline" secondItem="B6k-Xx-AOc" secondAttribute="baseline" id="YfN-Gv-6xb"/>
                             <constraint firstItem="IMx-Yh-VL7" firstAttribute="top" secondItem="gEP-2p-2bT" secondAttribute="bottom" constant="119" id="fIF-cm-hCn"/>
                             <constraint firstItem="wyB-Xg-hHv" firstAttribute="top" secondItem="Caa-XT-01H" secondAttribute="bottom" constant="8" symbolic="YES" id="hkG-Sb-iJt"/>
+                            <constraint firstItem="dJB-pa-jzn" firstAttribute="leading" secondItem="zNb-Hy-ZWn" secondAttribute="trailing" constant="8" symbolic="YES" id="irw-LQ-hNN"/>
+                            <constraint firstItem="zNb-Hy-ZWn" firstAttribute="top" secondItem="AJ3-9v-aRT" secondAttribute="bottom" constant="47" id="jCx-Qo-Qxx"/>
+                            <constraint firstItem="Kd5-La-26H" firstAttribute="top" secondItem="LIu-wc-gow" secondAttribute="bottom" constant="20" id="lrP-KZ-n88"/>
                             <constraint firstItem="Caa-XT-01H" firstAttribute="top" secondItem="aKi-W4-7bR" secondAttribute="bottom" constant="4" id="lsV-Or-mF0"/>
+                            <constraint firstItem="dJB-pa-jzn" firstAttribute="top" secondItem="AJ3-9v-aRT" secondAttribute="bottom" constant="52" id="m9r-zb-mZQ"/>
                             <constraint firstItem="aKi-W4-7bR" firstAttribute="trailing" secondItem="IMx-Yh-VL7" secondAttribute="trailing" id="oAw-Bf-HMH"/>
-                            <constraint firstAttribute="bottom" secondItem="xyS-7X-zgc" secondAttribute="bottom" constant="21" id="sbV-Wn-sLV"/>
+                            <constraint firstItem="dJB-pa-jzn" firstAttribute="trailing" secondItem="AJ3-9v-aRT" secondAttribute="trailing" id="sea-IY-EW3"/>
+                            <constraint firstItem="zNb-Hy-ZWn" firstAttribute="top" secondItem="Etw-e5-raT" secondAttribute="bottom" constant="8" symbolic="YES" id="uQK-td-40M"/>
                             <constraint firstItem="wyB-Xg-hHv" firstAttribute="leading" secondItem="Caa-XT-01H" secondAttribute="leading" id="veh-rz-g7f"/>
-                            <constraint firstItem="E1I-tt-Lh5" firstAttribute="top" secondItem="gEP-2p-2bT" secondAttribute="bottom" constant="22" id="wtW-eU-m9R"/>
                             <constraint firstItem="wyB-Xg-hHv" firstAttribute="trailing" secondItem="Caa-XT-01H" secondAttribute="trailing" id="zWb-GJ-Ple"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="colorModeDarkLabel" destination="dJB-pa-jzn" id="l9W-s1-q41"/>
+                        <outlet property="colorModeLabel" destination="Etw-e5-raT" id="6ft-zT-vBc"/>
+                        <outlet property="colorModeLightLabel" destination="B6k-Xx-AOc" id="0OX-sP-OSp"/>
                         <outlet property="dnmLogoLabel" destination="YCt-8S-fkb" id="b53-Dk-BlA"/>
                         <outlet property="loginStatusLabel" destination="IMx-Yh-VL7" id="tAI-5u-6io"/>
                         <outlet property="passwordField" destination="wyB-Xg-hHv" id="9OZ-bA-Amq"/>
+                        <outlet property="scoreSelectorTableView" destination="LIu-wc-gow" id="urT-xC-PB4"/>
                         <outlet property="signInOrOutOrUpButton" destination="aKi-W4-7bR" id="suz-Bz-fYQ"/>
                         <outlet property="signInOrUpButton" destination="AJ3-9v-aRT" id="ZVM-ct-3s3"/>
-                        <outlet property="tableView" destination="xyS-7X-zgc" id="Z3Y-Tz-Tkr"/>
                         <outlet property="usernameField" destination="Caa-XT-01H" id="vCs-gT-aCs"/>
                         <segue destination="OFY-yn-TKI" kind="show" identifier="showScore" animates="NO" id="Cb3-bX-1xv"/>
                     </connections>
